Fix unwanted extra vertical spacing in menus

--- a/css/material.css
+++ b/css/material.css
@@ -938,7 +938,7 @@ code {
 	background-color: #fff;
 	color: rgba(0, 0, 0, 0.87);
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26),
-							0 2px 10px 0 rgba(0, 0, 0, 0.16);
+	            0 2px 10px 0 rgba(0, 0, 0, 0.16);
 	margin: 0;
 	padding: 0;
 	border-radius: 2px;
@@ -957,6 +957,7 @@ code {
 	line-height: 2em;
 	width: 100%;
 	box-sizing: border-box;
+	vertical-align: top;
 }
 .menu li > a {
 	display: block;
